[package]
name = "nijika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.23"
erased-serde = "0.3.25"
openssl = "0.10.45"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-big-array = "0.5.1"
serde_json = "1.0.93"
vrf = "0.2.4"
rug = "1.19.1"
libp2p = {version = "0.51.1", features=["async-std", "dns", "gossipsub", "mdns", "mplex", "noise", "macros", "tcp", "websocket", "yamux"]}
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.10.0"
futures = "0.3.27"



[net]
git-fetch-with-cli = true
